css/style.css
/* ************************************************************************ */

:root{
    /* colors */
	--color-basic: #000000;
	--color-basic-invert: #ffffff;
    --color-primary: #080b12;
	--color-primary-light: #141922;
	--color-secondary: #282828;
	--color-secondary-light: #828282;
	--color-tertiary: #6e6e6e;
	--color-special: #abfc2f;
    --color-progress-empty: #5b5b5b;
    --color-progress-full: #c7c7c7;

    /* Spacing */
    --spacing-xxsmall: .5rem;
    --spacing-xsmall: 1rem;
    --spacing-small: 2rem;
    --spacing-medium: 3rem;
    --spacing-large: 4rem;
    --spacing-xlarge: 8rem;
    --spacing-xxlarge: 16rem;

	/* Proportions */
	--proportion-1_3: calc(100% / 3);
	--proportion-1_6: calc(100% / 6);
	--proportion-1_7: calc(100% / 7);
}

/* ************************************************************************ */

/* Reset Start */
/* Sizing reset */
*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
/* Rem reset */
html{
	font-size: 10px;
}
/* Font reset */
body{
	font-family: Arial, Helvetica, sans-serif;
    height: 100vh;
    width: 100vw;
}
/* Reset End */

/* ************************************************************************ */

/* Tags Reset Start */
/* Titles */
h1{
    font-size: 4.5rem;
    color: var(--color-basic-invert);
}

h2{
    font-size: 3rem;
    color: var(--color-basic-invert);
}

h3{
    font-size: 2rem;
    color: var(--color-basic-invert);
}

h4{
    font-size: 1.5rem;
    color: var(--color-basic-invert);
}

h5{
    font-size: 1.5rem;
    color: var(--color-basic-invert);
}

h6{
    font-size: 1rem;
    color: var(--color-basic-invert);
}
/* ------------------------------------ */

/* Text */
p{
    font-size: 1rem;
}

span{
    font-size: 1rem;
}

li{
    list-style: none;
}
/* ------------------------------------ */

/* Buttons - Links - imgs */
button{
    padding: var(--spacing-xsmall) calc(2 * var(--spacing-xsmall));
    text-align: center;
    border: none;
    font-size: 1rem;
    background-color: transparent;
    color: var(--color-basic-invert);
    transition: all .5s;
}

button:hover{
    transform: scale(1.2);
}

button.upgrade{
    border-radius: var(--spacing-medium);
    border: 2px solid var(--color-basic-invert);
}

button.small{
    border-radius: 50%;
    border: 1px solid var(--color-secondary-light);
    padding: unset;
    height: 1rem;
    aspect-ratio: 1/1;
    vertical-align: middle;
}

button.empty{
    padding: unset;
}

img{
    display: block;
    width: 100%;
    object-fit: contain;
}

img.small{
	width: 15%;
}

a{
    font-size: 1rem;
    display: inline-block;
    color: var(--color-secondary-light);
    text-decoration: none;
    transition: all .3s;
}

a:hover{
    color: var(--color-basic-invert);
}

a.subtitle:hover{
    text-decoration: underline;
}
/* Tags Reset End */

/* ************************************************************************ */

/* Utility Start */
/* Containers */
.container{
	width: 80%;
    max-width: 920px;
    margin: 0 auto;
}

.container.big{
	width: 90%;
    max-width: 1200px;
}

.card{
	padding: var(--spacing-xxsmall);	
}

.card-img{
    position: relative;
}

.scroll{
    overflow: auto;
}
/* ------------------------------------ */

/* Flex */
.row{
    display: flex;
}

.row.wrap{
	flex-wrap: wrap;
}

.row.d-c{
    flex-direction: column;
}

.row.s-b{
    justify-content: space-between;
}

.row.j-c{
    justify-content: center;
}

.row.a-c{
    align-items: center;
}

.col.grow{
    flex-grow: 1;
    min-height: 0px;
}

.col.no-shrink{
    flex-shrink: 0;
}

.col.c1_2{
    flex-basis: 50%;
}
/* ------------------------------------ */

/* Text */
.txt-center{
	text-align: center;
}

.txt-right{
    text-align: right;
}

.txt-bold{
	font-weight: bold;
}
/* ------------------------------------ */

/* Backgrounds */
.bg-primary{
    background-color: var(--color-primary);
}
/* ------------------------------------ */

/* Padding */
.pdd.p-xxs{
    padding: var(--spacing-xxsmall);
}

.pdd.p-xs{
    padding: var(--spacing-xsmall);
}

.pdd.p-s{
    padding: var(--spacing-small);
}

.pdd.p-m{
    padding: var(--spacing-medium);
}

.pdd.p-l{
    padding: var(--spacing-large);
}

.pdd.p-xl{
    padding: var(--spacing-xlarge);
}

.pdd.p-xxl{
    padding: var(--spacing-xxlarge);
}

.pdd.px{
    padding-top: 0;
    padding-bottom: 0;
}

.pdd.py{
    padding-left: 0;
    padding-right: 0;
}

/* Margin */
.mrg-a{
    margin: auto;
}

.mrg-l-a{
    margin-left: auto;
}

.mrg-r-a{
    margin-right: auto;
}

.mrg.m-xxs{
    margin: var(--spacing-xxsmall);
}

.mrg.m-xs{
    margin: var(--spacing-xsmall);
}

.mrg.m-s{
    margin: var(--spacing-small);
}

.mrg.m-m{
    margin: var(--spacing-medium);
}

.mrg.m-l{
    margin: var(--spacing-large);
}

.mrg.m-xl{
    margin: var(--spacing-xlarge);
}

.mrg.m-xxl{
    margin: var(--spacing-xxlarge);
}

.mrg.mx{
    margin-top: 0;
    margin-bottom: 0;
}

.mrg.my{
    margin-left: 0;
    margin-right: 0;
}
/* Utility End */

/* ************************************************************************ */

/* Main */
aside{
    background-color: var(--color-basic);
}


img.logo-small{
    width: var(--spacing-small);
}

img.logo-big{
    display: none;
    width: 12rem;
}

aside span{
    display: none;
    margin-left: var(--spacing-xsmall);
}

aside i{
    font-size: 1.7rem;
    vertical-align: middle;
}

aside li.install-app{
    border-bottom: 1px solid var(--color-secondary-light);
}

aside h2 .title{
    font-size: 1.5rem;
}

aside .create-btn button{
    padding: unset;
    font-size: 2rem;
    color: var(--color-basic);
    vertical-align: middle;
    background-color: var(--color-secondary-light);
    width: 2.5rem;
    aspect-ratio: 1/1;
    border-radius: 5px;
}

aside .create-btn a span{
    font-size: 1.2rem;
    vertical-align: middle;
}

aside button.small i{
    font-size: .7rem;
    color: var(--color-secondary-light);
    vertical-align: text-top;
}

aside a.profile{
    color: var(--color-basic-invert);
}

aside .playlist-hidden{
    display: none;
}

section{
    background-color: var(--color-primary-light);
}

section .card-img{
    position: relative;
}

section .card-img:hover .overlay{
    opacity: 1;
}

section .overlay{
    background-color: rgba(0, 0, 0, .5);
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0; 
    color: var(--color-basic-invert);
    font-size: 5rem;
    opacity: 0;
    transition: all .4s;
}

/* ************************************************************************ */

/* Footer */
footer{
    background-color: var(--color-secondary);
}

footer i{
    color: var(--color-basic-invert);
    font-size: 1.5rem;
}

footer div.left i{
    color: var(--color-secondary-light);
}

footer span{
    font-size: .8rem;
}

footer .likes{
    gap: var(--spacing-xxsmall);
}

footer .likes i{
    transition: all.3s;
}

footer .likes i:hover{
    color: var(--color-basic-invert);
}

footer button i.fa-circle-play{
    font-size: 2rem;
}

footer .playbuttons{
    gap: .5rem;
}

footer .empty-bar{
    background-color: var(--color-progress-empty);
    height: 4px;
    border-radius: 2px;
}

footer .full-bar{
    background-color: var(--color-progress-full);
    height: 4px;
    border-radius: 2px;
    width: 20%;
    transition: all .3s;
    position: relative;
}

footer .settings{
    gap: var(--spacing-xxsmall);
    flex-basis: 30%;
}

footer .volume{ 
    flex-basis: 50%;
}

footer .img-container img{
    max-width: 5rem;
}

.round{
    border-radius: 50%;
}

footer div.progressbar:hover .full-bar{
    background-color: var(--color-special);
}

footer div.dot{
    height: 4px;
    width: 4px;
    border-radius: 50%;
    background-color: var(--color-basic-invert);
    position: absolute;
    right: 0;
    opacity: 0;
    transition: all .3s;
}

footer div.progressbar:hover div.dot{
    opacity: 1;
    transform: scale(2);
}


/* ************************************************************************ */
/*                             Media Query                                  */
/* ************************************************************************ */

/* S - Small */
@media screen and (min-width: 568px){
    html{
        font-size: 12px;
    }

    aside{
        width: 200px;
    }

    aside li.row.j-c{
        justify-content: flex-start;
    }

    aside span{
        display: inline-block;
    }

    img.logo-small{
        display: none;
    }
    
    img.logo-big{
        display: block;
    }

    aside .playlist-hidden{
        display: block;
    }

    footer a.row.d-c{
        flex-direction: row;
        gap: .3rem;
    }

    
    footer .settings{
        flex-basis: 20%;
    }

    footer .playbuttons{
        gap: 2rem;
    }

}
/* ------------------------------------ */

/* M - Medium */
@media screen and (min-width: 768px){
    footer .likes.row,
    footer .settings{
        flex-direction: row;
        gap: 1.5rem;
    }

    footer .playbuttons{
        gap: 3rem;
    }

    .col.m-1_4{
        flex-basis: 25%;
    }
}
/* ------------------------------------ */

/* L - Large */
@media screen and (min-width: 992px){

    footer .playbuttons{
        gap: 4.5rem;
    }

    footer .settings{
        flex-basis: 15%;
    }

    .col.l-1_6{
        flex-basis: var(--proportion-1_6);
    }
}

